# CypLang

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: hello.cyp
include/: ast.h  common.h  interpreter.h  lexer.h  parser.h
src/: ast.c  interpreter.c  lexer.c  main.c  parser.c
src/ast/: ast.c
src/backend/: llvm_emitter.c  llvm_emitter.h
src/frontend/ast/: ast.c  ast.h
src/frontend/lexer/: lexer.c  lexer.h
src/frontend/parser/: parser.c  parser.h
src/middle/: ir_generator.c  ir_generator.h
src/token/: token.h
tests/: run.sh
tests/cases/: 01_arithmetic_priority.cyp  01_arithmetic_priority.expected  02_unary_and_expr.cyp  02_unary_and_expr.expected  03_multiple_vars.cyp  03_multiple_vars.expected  04_float_literal.cyp  04_float_literal.expected  05_function_with_params.cyp  05_function_with_params.expected  06_hello_world.cyp  06_hello_world.expected
